# cpu-raytracer

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
include/: taskTimer.hpp
src/: Color.hpp  Ray.hpp  camera.cpp  camera.hpp  color.hpp  hittable.hpp  hittableList.hpp  image.hpp  main.cpp  material.cpp  material.hpp  meson.build  modelTri.hpp  ray.cpp  ray.hpp  rtweekend.hpp  sphere.hpp  texture.cpp  texture.hpp
src/acceleration/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  bvh1.cpp  bvh1.hpp  bvh2.cpp  bvh2.hpp  bvh3.cpp  bvh3.hpp
src/shape/: plane.cpp  plane.hpp  quad.hpp  sphere.cpp  sphere.hpp  triangle.hpp
